style.css
:root {
    --main-color: #222831;
    --secondary-color: #31363F;
    --text-color: #76ABAE;
    --secondary-text-color: #678183;
    --button-color: #EEEEEE;
}

body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;

    background-color: var(--main-color);

    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    min-height: 70vh;

    margin: none;
}

h1 {
    font-size: max(50px, 4vw);
    margin: 0;
    color: var(--text-color);
    text-align: center;
}

h2 {
    color: var(--secondary-text-color);
    
    margin-top: 0;
    margin-bottom: max(60px, 6vw);
    
    text-align: center;
    font-size: max(20px, 1.8vw);
}

footer {
    color: var(--secondary-text-color);
    font-size: 1em;

    margin-bottom: 10px;

    position: absolute;
    bottom: 0;
}

footer a {
    color: var(--text-color);
    font-style: none;
}

#generate-btn {
    padding: 10px 20px;
    margin-top: 30px;

    border: none;
    border-radius: 6px;

    background-color: var(--button-color);
    color: var(--secondary-color);

    font-size: max(16px, 1vw);
    font-weight: bold;
    
    cursor: pointer;

    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); 

    transition: background-color 0.2s, color 0.2s;
}

#generate-btn:hover {
    background-color: var(--secondary-color);
    color: var(--button-color);
}

#generate-btn:active {
    background-color: var(--main-color);
    color: var(--button-color);
}

.display-container {
    border: 2px solid var(--secondary-color);
    border-radius: 6px;
    padding: none;
    background-color: var(--button-color);

    display: flex;
    align-items: center;

    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); 
}

.display-container input {
    border: none;
    margin: none;

    padding: 12px 20px;

    width: 200px;

    background-color: var(--button-color);
}   

.display-container button {
    border: none;
    margin: none;
    padding: 12px 8px;

    
    border-left: 1px solid;
    border-bottom-right-radius: 6px;
    border-top-right-radius: 6px;

    background-color: var(--button-color);

    font-size: max(16px, 1vw);
    font-weight: bold;

    color: var(--secondary-color);

    cursor: pointer;

}

.display-container button:hover {
    background-color: var(--secondary-color);
    color: var(--button-color);
    
    border-bottom-right-radius: 0px;
    border-top-right-radius: 0px;
}

.display-container button:active {
    background-color: var(--main-color);
    color: var(--button-color);
    
    border-bottom-right-radius: 0px;
    border-top-right-radius: 0px;
}

#installButton {
    position: fixed;
    top: 20px;
    right: 20px;

    padding: 10px 20px;

    border: none;
    border-radius: 6px;

    background-color: var(--text-color);
    color: var(--button-color);

    font-size: max(16px, 1vw);
    font-weight: bold;
    
    cursor: pointer;

    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); 

    transition: background-color 0.2s;
}

#installButton:hover {
    background-color: var(--secondary-text-color);
}

